# spillcash

./: .gitignore  Cargo.toml  commit.txt.ots  flake.nix
src/: cashu.rs  cashu_web.rs  main.rs  musig.rs  tx.rs  web.rs
web/src/: App.jsx  Bar.jsx
