[package]
name = "spillcash"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cdk = { version = "0.11.1", default-features = false, features = ["wallet"] }
cdk-sqlite = { version = "0.11.1", default-features = false, features = ["wallet"] }
home = "0.5.11"
rand = "0.9.2"
tokio = "1.47.1"
bitcoin = { version = "0.32.7", features = [ "rand", "rand-std" ] }
lazy_static = "1.5.0"

[dependencies.secp256k1-musig]
package = "secp256k1"
git = "https://github.com/rust-bitcoin/rust-secp256k1.git"
rev = "72822e16b1433337baceb0abb5134cc24a062adb"
features = [ "serde" ]
