[package]
name = "spillcash"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cdk = { version = "0.11.1", default-features = false, features = ["wallet"] }
cdk-sqlite = { version = "0.11.1", default-features = false, features = ["wallet"] }
home = "0.5.11"
rand = "0.9.2"
bitcoin = { version = "0.32.7", features = [ "rand", "rand-std" ] }
lazy_static = "1.5.0"
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.7.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors"] }
chrono = { version = "0.4.38", features = ["serde"] }
hex = "0.4.3"

[dependencies.secp256k1-musig]
package = "secp256k1"
git = "https://github.com/rust-bitcoin/rust-secp256k1.git"
rev = "72822e16b1433337baceb0abb5134cc24a062adb"
features = [ "serde" ]
